Adds CRUD operations to bootcamp
